--- a/app/src/main/res/values/category_array.xml
+++ b/app/src/main/res/values/category_array.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="category_array">
-        <item>Aluminium</item>
-        <item>E-Waste</item>
-        <item>Plastic</item>
-        <item>Paper</item>
+        <item>Flood</item>
+        <item>Fire Incident</item>
+        <item>Terrorist Attack</item>
+        <item>Chemical Leaking</item>
+        <item>Tsunami</item>
+        <item>Typhoon</item>
     </string-array>
 </resources>
