--- a/app/src/main/res/layout/marker_detail_bottom_sheet.xml
+++ b/app/src/main/res/layout/marker_detail_bottom_sheet.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/wasteLocationDetailBottomSheet"
+    android:id="@+id/incidentDetailBottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#fff"
@@ -21,23 +21,27 @@
         android:textStyle="bold" />
     
     <TextView
+        android:id="@+id/incidentTypeTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category"/>
+        android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/addressTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remarks"/>
+        android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/locationDescriptionTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Status"/>
+        android:layout_height="wrap_content" />
 
     <TextView
+        android:id="@+id/incidentDescriptionTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Created By"/>
+        android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/reportDateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
