--- a/app/src/main/res/layout/submit_bottom_sheet.xml
+++ b/app/src/main/res/layout/submit_bottom_sheet.xml
@@ -12,27 +12,36 @@
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Drop Incident"
+        android:layout_marginBottom="30dp"
+        android:text="Drop a Incident"
         android:textColor="#FFF"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAlignment="center" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/titleLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
 
         <EditText
             android:id="@+id/titleInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:hint="Title"
             android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=" Incident Type"
+        android:textColor="#9E9E9E"
+        android:layout_marginBottom="5dp"
+        android:textSize="12dp" />
 
     <Spinner
         android:id="@+id/typeCategory"
@@ -40,96 +49,90 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
 
-    <TextView
-        android:id="@+id/locationText"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="15dp"
-        android:textColor="#9E9E9E"
-        android:text="Address"
-        android:inputType="text" />
-        <TextView
+        android:layout_marginBottom="10dp">
+        <EditText
             android:id="@+id/locationInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textSize="18dp"
-            android:inputType="text" />
-
+            android:hint="Address"
+            android:inputType="text"
+            android:focusable="false" />
+    </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/locationDescriptionLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
 
         <EditText
             android:id="@+id/locationDescriptionInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:hint="Location Remarks"
             android:inputType="text" />
     </android.support.design.widget.TextInputLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="10">
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/descriptionLayout"
-        android:layout_width="329dp"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/descriptionInput"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/descriptionLayout"
             android:layout_width="329dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:hint="Incident Description"
-            android:inputType="text" />
-    </android.support.design.widget.TextInputLayout>
-    <ImageView
-        android:id="@+id/uploadImageButton"
-        android:layout_width="60dp"
-        android:layout_height="50dp"
-        android:layout_weight="4"
-        android:layout_toRightOf="@id/descriptionInput"
-        android:src="@drawable/ic_addimage" />
+            android:layout_height="wrap_content">
 
+            <EditText
+                android:id="@+id/descriptionInput"
+                android:layout_width="329dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:hint="Incident Description"
+                android:inputType="text" />
+        </android.support.design.widget.TextInputLayout>
 
+        <ImageView
+            android:id="@+id/uploadImageButton"
+            android:layout_width="60dp"
+            android:layout_height="50dp"
+            android:layout_weight="4"
+            android:layout_toRightOf="@id/descriptionInput"
+            android:src="@drawable/ic_add_image" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/showImage"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:orientation="horizontal"
-        android:weightSum="10">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
+        <Button
+            android:id="@+id/submitRequestButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SUBMIT REQUEST"
+            android:foreground="?attr/selectableItemBackground"
+            android:background="#000"
+            android:textColor="#fff"/>
 
         <ProgressBar
             android:id="@+id/submitRequestProgressBar"
             style="?android:attr/progressBarStyle"
-            android:layout_width="124dp"
-            android:layout_height="117dp"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
             android:layout_centerInParent="true"
-            android:layout_weight="4"
             android:layout_gravity="top"
-            android:visibility="invisible"/>
-
-        <ImageView
-            android:id="@+id/showImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4" />
-    </RelativeLayout >
-
-    <Button
-        android:id="@+id/submitRequestButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="SUBMIT INCIDENT"
-        android:background="#000"
-        android:foreground="?attr/selectableItemBackground"
-        android:textColor="#fff"/>
+            android:visibility="invisible"
+            android:indeterminate="true"
+            android:indeterminateTint="#fff"
+            android:indeterminateTintMode="src_in"/>
+    </RelativeLayout>
 
 </LinearLayout>
