--- a/app/src/main/res/layout/submit_bottom_sheet.xml
+++ b/app/src/main/res/layout/submit_bottom_sheet.xml
@@ -79,27 +79,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         android:weightSum="10">
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/descriptionLayout"
-            android:layout_width="329dp"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9">
 
             <EditText
                 android:id="@+id/descriptionInput"
-                android:layout_width="329dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:hint="Incident Description"
                 android:inputType="text" />
         </android.support.design.widget.TextInputLayout>
 
         <ImageView
             android:id="@+id/uploadImageButton"
-            android:layout_width="60dp"
-            android:layout_height="50dp"
-            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:layout_toRightOf="@id/descriptionInput"
             android:src="@drawable/ic_add_image" />
     </LinearLayout>
